@@ -67,6 +67,32 @@ if ( $is_admin && ! empty ( $public ) && $PUBLIC_ACCESS == 'Y' ) {
   load_user_preferences ();
 }
 
+//get list of theme files from /themes directory
+$themes = array ();
+$dir = 'themes/';
+if (is_dir ($dir)) {
+   if ($dh = opendir ($dir)) {
+       while (($file = readdir ($dh)) !== false) {
+         if ( strpos ( $file, '_pref.php' ) )
+           $themes[] = str_replace ( '_pref.php', '', $file );
+       }
+       sort ( $themes );
+       closedir ($dh);
+   }
+}
+
+if ( ! empty ( $_POST ) && empty ( $error ) ) {
+  $t = $_POST['pref_THEME'];
+  if ( ! empty ( $t ) ) {
+    $valid = false;
+    foreach ( $themes as $theme ) {
+      if ( $theme == $t )
+        $valid = true;
+    }
+    if ( ! $valid )
+      $error = translate('Invalid theme');
+  }
+}
 if ( ! empty ( $_POST ) && empty ( $error )) {
   $my_theme = '';
   $currenttab = getPostValue ( 'currenttab' );
@@ -114,20 +140,6 @@ $translation_loaded = false;
 reset_language ( get_pref_setting ( $login, 'LANGUAGE' ) );
 //move this include here to allow proper translation
 include 'includes/date_formats.php';
-
-//get list of theme files from /themes directory
-$themes = array ();
-$dir = 'themes/';
-if (is_dir ($dir)) {
-   if ($dh = opendir ($dir)) {
-       while (($file = readdir ($dh)) !== false) {
-         if ( strpos ( $file, '_pref.php' ) )
-           $themes[] = str_replace ( '_pref.php', '', $file );
-       }
-       sort ( $themes );
-       closedir ($dh);
-   }
-}
 
 //get list of menu themes
 $menuthemes = array ();
